stretch,shrink columns on routes screen

--- a/thearch_android_test/Resources/layout/RoutePicker.axml
+++ b/thearch_android_test/Resources/layout/RoutePicker.axml
@@ -12,6 +12,8 @@
             android:id="@+id/tableLayout"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:scrollbars="none" />
+            android:scrollbars="none"
+            android:stretchColumns="*"
+            android:shrinkColumns="*" />
     </ScrollView>
 </RelativeLayout>
